# thekumarmethod

./: .gitignore  README.md  SKILL.md  production.md  pyproject.toml  script.md
.cursor/rules/: global.mdc
.cursor/skills/seedance2.0/: SKILL.md
.cursor/skills/tft-cli/: SKILL.md
.cursor/skills/tft-cli-models/: SKILL.md
.cursor/skills/tft-cli-video-editor/: SKILL.md
code/: __init__.py  scene_time.py
